--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,6 +17,7 @@ html,
 body {
 	max-width: 100vw;
 	overflow-x: hidden;
+	background-image: linear-gradient(-20deg, #e9defa 0%, #fbfcdb 100%);
 }
 
 a {
