--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -3,10 +3,10 @@
   --typography-headings: theme(colors.gray.900);
   --typography-quotes: theme(colors.gray.500);
   --typography-quotes-border: theme(colors.gray.200);
-  --typography-links: theme(colors.sky.500);
-  --typography-link-hover: theme(colors.sky.600);
-  --typography-link-underline: theme(colors.sky.400 / 0.4);
-  --typography-link-hover-underline: theme(colors.sky.600 / 0.4);
+  --typography-links: theme(colors.yellow.500);
+  --typography-link-hover: theme(colors.yellow.600);
+  --typography-link-underline: theme(colors.yellow.400 / 0.4);
+  --typography-link-hover-underline: theme(colors.yellow.600 / 0.4);
   --typography-pre: theme(colors.gray.300);
   --typography-pre-shadow: theme(boxShadow.md);
   --typography-bold: theme(colors.gray.900);
@@ -22,7 +22,7 @@
   --shiki-token-constant: theme(colors.emerald.300);
   --shiki-token-string: theme(colors.emerald.300);
   --shiki-token-comment: theme(colors.gray.500);
-  --shiki-token-keyword: theme(colors.sky.300);
+  --shiki-token-keyword: theme(colors.yellow.300);
   --shiki-token-parameter: theme(colors.pink.300);
   --shiki-token-function: theme(colors.violet.300);
   --shiki-token-string-expression: theme(colors.emerald.300);
@@ -33,9 +33,9 @@
     --typography-headings: theme(colors.white);
     --typography-quotes: theme(colors.gray.400);
     --typography-quotes-border: theme(colors.gray.800);
-    --typography-links: theme(colors.sky.400);
+    --typography-links: theme(colors.yellow.400);
     --typography-link-hover: theme(colors.white);
-    --typography-link-underline: theme(colors.sky.400 / 0.4);
+    --typography-link-underline: theme(colors.yellow.400 / 0.4);
     --typography-link-hover-underline: theme(colors.white / 0.4);
     --typography-pre: theme(colors.gray.400);
     --typography-pre-shadow: inset 0 0 0 1px theme(colors.white / 0.1);
