UI: Update styling for Intro and Layout components - Adjusted the gap between elements in Intro component for better alignment - Modified stroke thickness in Layout component for improved visual appearance
The changes were made to enhance the visual presentation and layout consistency of the UI components.

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,1 +1,30 @@
 @tailwind base;
+
+
+body {
+    --sb-track-color: #1b2324;
+    --sb-thumb-color: #ffffff;
+    --sb-size: 8px;
+}
+
+body::-webkit-scrollbar {
+    width: var(--sb-size)
+}
+
+body::-webkit-scrollbar-track {
+    background: var(--sb-track-color);
+    border-radius: 3px;
+}
+
+body::-webkit-scrollbar-thumb {
+    background: var(--sb-thumb-color);
+    border-radius: 3px;
+
+}
+
+@supports not selector(::-webkit-scrollbar) {
+    body {
+        scrollbar-color: var(--sb-thumb-color)
+        var(--sb-track-color);
+    }
+}
