Update UI scrollbar styles - Changed scrollbar thumb color opacity to 70% for improved visibility - Reduced border radius of scrollbar track and thumb for a sleeker look
These changes were made to enhance the visual appeal and usability of the UI by adjusting scrollbar styling for better user experience.

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -3,7 +3,7 @@
 
 body {
     --sb-track-color: #1b2324;
-    --sb-thumb-color: #ffffff;
+    --sb-thumb-color: rgba(255,255,255,0.7);
     --sb-size: 8px;
 }
 
@@ -13,12 +13,12 @@ body::-webkit-scrollbar {
 
 body::-webkit-scrollbar-track {
     background: var(--sb-track-color);
-    border-radius: 3px;
+    border-radius: 1px;
 }
 
 body::-webkit-scrollbar-thumb {
     background: var(--sb-thumb-color);
-    border-radius: 3px;
+    border-radius: 1px;
 
 }
 
