--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,30 +1,27 @@
 @tailwind base;
 
-
 body {
-    --sb-track-color: #1b2324;
-    --sb-thumb-color: rgba(255,255,255,0.7);
-    --sb-size: 8px;
+	--sb-track-color: #1b2324;
+	--sb-thumb-color: rgba(255, 255, 255, 0.7);
+	--sb-size: 8px;
 }
 
 body::-webkit-scrollbar {
-    width: var(--sb-size)
+	width: var(--sb-size);
 }
 
 body::-webkit-scrollbar-track {
-    background: var(--sb-track-color);
-    border-radius: 1px;
+	background: var(--sb-track-color);
+	border-radius: 1px;
 }
 
 body::-webkit-scrollbar-thumb {
-    background: var(--sb-thumb-color);
-    border-radius: 1px;
-
+	background: var(--sb-thumb-color);
+	border-radius: 1px;
 }
 
 @supports not selector(::-webkit-scrollbar) {
-    body {
-        scrollbar-color: var(--sb-thumb-color)
-        var(--sb-track-color);
-    }
+	body {
+		scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
+	}
 }
